--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
 <head>  
   
-  <title>Welcome to Therahealth - Krish and Sahil.</title>
+  <title>Welcome to SaniCreations, where you can buy cheap, high quality jewlery and also help people in need!.</title>
   
   
   
@@ -15,7 +15,7 @@
   
 <body>
 
-  
+  <h1>About us:</h1>
   
 </body>
   
